@@ -1,2 +1,0 @@
-cassandra   -   memlock     unlimited
-cassandra   -   nofile      100000
