@@ -1,4 +1,5 @@
 1.1-dev
+ * removed in-tree redhat spec (CASSANDRA-3567)
  * "defragment" rows for name-based queries under STCS, again (CASSANDRA-2503)
  * Recycle commitlog segments for improved performance 
    (CASSANDRA-3411, 3543, 3557)
